[package]
name = "hashes-from-twdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.1"
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
demo = { git = "https://github.com/heinrich5991/libtw2", ref = "5f07c47f71acb943aaa8aa4a6d693980db6a15d9" }
serde_json = "1.0.87"
warn = "0.2.2"
